spec/fixtures/modules/error/plans/inner.pp
plan error::inner(
) {
  run_command('whoami')
}
